--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,10 +11,17 @@
   <filter>
     <filter-name>EncodingFilter</filter-name>
     <filter-class>Filter.EncodingFilter</filter-class>
-</filter>
- 
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>EncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
+  </filter-mapping>
+   <filter>
+    <filter-name>AuthFilter</filter-name>
+    <filter-class>Filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
